gitops/platform-apps/outline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: outline
  labels:
    app.kubernetes.io/name: outline
