gitops/platform-apps/outline/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  namespace: outline
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`outline.__ZONE_NAME__`)
      services:
        - kind: Service
          name: outline
          port: 80
  tls: {}
